<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/corners"
        android:backgroundTint="#FFCB42"
        android:elevation="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/corners"
            android:backgroundTint="#FFB200"
            android:elevation="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/returne"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/arrow"
                android:textColor="@color/black"></Button>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="monospace"
                    android:text="@string/welcom"
                    android:textColor="@color/black"
                    android:textSize="50dp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/login_continue"
                    android:textColor="@color/black"
                    android:textSize="20dp">

                </TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/coeners_input"

        android:backgroundTint="@color/white"
        android:elevation="20dp"
        android:gravity="top"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            app:boxStrokeColor="#FFB200"
            app:hintTextColor="#FFB200"

            app:startIconDrawable="@drawable/email"
            app:suffixText="@string/gmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="58dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            app:boxStrokeColor="#FFB200"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="#F32A2A"
            app:hintTextColor="#FFB200"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="58dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp">

        </TextView>
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:buttonTint="#F5A21D"
            android:text="@string/checkbox" />
    </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="#F5A21D"
            android:text="@string/log_in"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:layout_gravity="center">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_withe" />
            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/black"/>
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="#0054E4"
            android:text="@string/faceboock"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="#EC1313"
            android:text="@string/google"
            android:textSize="18dp" />
</LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>